# BioKinema

./: .gitignore  README.md  environment.yml  inference.sh  pyproject.toml  readme.md  setup.py  train-lk.sh  train.ipynb  train_trajectory.sh
configs/: configs_base.py  configs_data.py  configs_inference.py
docs/: data_and_training.md  data_codec.md  data_msm.md  inference.md
example/ADK/: ADK_apo.cif  ADK_holo.cif
example/ATLAS-OOD/: 6d7y_A_R1_0.cif  6d7y_B_R1_0.cif  6e7e_A_R1_0.cif  6gus_A_R1_0.cif  6h49_A_R1_0.cif  6h86_A_R1_0.cif  6iah_A_R1_0.cif  6in7_A_R1_0.cif  6jpt_A_R1_0.cif  6kty_A_R1_0.cif  6l34_A_R1_0.cif  6l4l_A_R1_0.cif  6l4p_B_R1_0.cif  6l8s_A_R1_0.cif  6lrd_A_R1_0.cif  6lus_A_R1_0.cif  6ndw_B_R1_0.cif  6nl2_A_R1_0.cif  6o2v_A_R1_0.cif  6o6y_A_R1_0.cif  6odd_B_R1_0.cif  6okd_C_R1_0.cif  6ono_C_R1_0.cif  6ovk_R_R1_0.cif  6oz1_A_R1_0.cif  6p5h_A_R1_0.cif  6pce_B_R1_0.cif  6q10_A_R1_0.cif  6q9c_A_R1_0.cif  6q9c_B_R1_0.cif  6qj0_A_R1_0.cif  6ro6_A_R1_0.cif  6rrv_A_R1_0.cif  6rwt_A_R1_0.cif  6sms_A_R1_0.cif  6tly_A_R1_0.cif  6uof_A_R1_0.cif  6vjg_A_R1_0.cif  6xb3_H_R1_0.cif  6y2x_A_R1_0.cif  (+19 more)
example/MISATO-OOD/: 1DGM.cif  1E03.cif  1IUP.cif  1RZX.cif  1UGP.cif  2CBZ.cif  2FJ0.cif  2KAW.cif  2QPQ.cif  2W87.cif  3DGN.cif  3DWB.cif  3E3U.cif  3ESS.cif  3F69.cif  3GZN.cif  3KD7.cif  3M8U.cif  3OGM.cif  3TD4.cif  3UAT.cif  3V31.cif  4EUO.cif  4NP9.cif  4OCQ.cif  4QK4.cif  4RSC.cif  4U3F.cif  4UU5.cif  4XYC.cif  4Y0A.cif  4YXD.cif  5GR9.cif  5LWE.cif  5MTE.cif  6BTO.cif  6C85.cif  6F90.cif  6F92.cif  6HKE.cif
example/allosteric_interaction/: Pin1_apo.cif  Pin1_holo.cif
example/cryptic_pockets/1ADE_A_P0A7D4/: 1ADE_A_P0A7D4_0.cif
example/homologous_proteins/: FGFR1_8XLO.cif  FGFR2_8STG.cif
experiments/: README.md
experiments/atlas_benchmark/: README.md  atlas_test_systems.txt  expected_metrics.txt  run_reproduce.sh
experiments/kinetics_thermo/: README.md  run_analysis.sh  run_inference.sh
experiments/protein_ligand_dynamics/: README.md  run_adk.sh  run_analysis.sh  run_inference.sh  run_misato_ood.sh  run_pin1.sh
protenix/config/: config.py
protenix/data/: ccd.py  data_pipeline.py  dataloader.py  dataset.py  featurizer.py  filter.py  msa_featurizer.py  msa_utils.py  msm_builder.py  parser.py  tokenizer.py  traj_codec.py  utils.py
protenix/model/: generator.py  loss.py  protenix.py  tica_dynamics_loss.py  utils.py
protenix/web_service/: colab_request_parser.py  colab_request_utils.py
runner/: dumper.py  inference.py  inference_multi.py  train.py
scripts/: encode_embeddings.sh
scripts/codec/: batch_compress.py  compress_trajectory.py
scripts/data_prep/: convert_pdb_to_cif.py  convert_xtc_to_cif.py  convert_xtc_to_cif_bioemu.py  convert_xtc_to_cif_lynxkite.py  download_atlas.sh  prepare_training_data.py  prepare_training_data_bydir.py
scripts/inference/: analyze_ensembles.py  batch_protenix_cif_trajectories.py  batch_structure_trajectories.py  merge_bioemu_xtc_msm.py  merge_protenix_only_xtc.py  merge_structure_predictions_to_xtc.py  run_bioemu_msm_pipeline.sh
scripts/msm/: build_multiK_msm.py
scripts/splits/: atlas.csv  atlas_test.csv  atlas_train.csv  atlas_val.csv
(+177 files in other folders)
