[project]
name = "biokinema"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "annotated-types==0.7.0",
    "asttokens==3.0.0",
    "attrs==25.3.0",
    "biopython==1.83",
    "biotite==1.0.1",
    "biotraj==1.2.2",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click>=8.4.2",
    "colorama==0.4.6",
    "comm==0.2.2",
    "contourpy==1.3.1",
    "cuequivariance>=0.10.0",
    "cuequivariance-torch>=0.10.0",
    "cycler==0.12.1",
    "cython==3.1.6",
    "debugpy==1.8.11",
    "decorator==5.2.1",
    "deepspeed==0.16.4",
    "dm-tree>=0.1.8",
    "einops==0.8.1",
    "exceptiongroup==1.2.2",
    "executing==2.2.0",
    "fair-esm==2.0.0",
    "fastdtw==0.3.4",
    "filelock==3.18.0",
    "fonttools==4.56.0",
    "fsspec==2025.3.0",
    "gemmi==0.7.4",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "griddataformats==1.0.2",
    "h5py==3.13.0",
    "hjson==3.1.0",
    "huggingface-hub>=0.36.2",
    "icecream==2.1.4",
    "idna==3.10",
    "ihm==2.3",
    "importlib-metadata==8.6.1",
    "ipdb==0.13.13",
    "ipykernel==6.29.5",
    "ipython==9.0.2",
    "ipython-pygments-lexers==1.1.1",
    "ipywidgets==8.1.5",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "joblib==1.4.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "jupyterlab-widgets==3.0.13",
    "kiwisolver==1.4.8",
    "lmdb==1.6.2",
    "markupsafe==3.0.2",
    "matplotlib==3.9.2",
    "mda-xdrlib==0.2.0",
    "mdanalysis==2.9.0",
    "mdtraj==1.11.0",
    "ml-collections==1.0.0",
    "mmtf-python==1.1.3",
    "modelcif==0.7",
    "mpmath==1.3.0",
    "mrcfile==1.5.4",
    "msgpack==1.1.0",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "ninja==1.11.1.3",
    "numpy==1.26.3",
    "nvidia-cutlass>=4.2.0.0",
    "nvidia-ml-py>=13.610.43",
    "opt-einsum==3.4.0",
    "optree==0.14.1",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pickleshare==0.7.5",
    "pillow==11.1.0",
    "platformdirs==4.3.6",
    "prompt-toolkit==3.0.50",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "py-cpuinfo==9.0.0",
    "py-spy==0.4.1",
    "py3dmol==2.4.2",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pygments==2.19.1",
    "pymupdf==1.26.7",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.1",
    "pyyaml==6.0.2",
    "pyzmq==26.2.0",
    "rdkit==2024.9.6",
    "requests==2.32.3",
    "scikit-learn==1.6.1",
    "scikit-learn-extra==0.3.0",
    "scipy==1.15.2",
    "seaborn==0.13.2",
    "sentry-sdk==2.22.0",
    "setproctitle==1.3.5",
    "smmap==5.0.2",
    "stack-data==0.6.3",
    "svgwrite==1.4.3",
    "sympy==1.13.3",
    "tensorboardx==2.6.2.2",
    "termcolor==3.2.0",
    "threadpoolctl==3.6.0",
    "tmtools==0.2.0",
    "tokenizers==0.21.1",
    "torch>=2.4.1",
    "torchdiffeq>=0.2.5",
    "tqdm>=4.69.0",
    "triton==3.0.0",
    "typing-extensions==4.13.2",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "wandb>=0.28.1",
    "wcwidth==0.2.13",
    "widgetsnbextension==4.0.13",
    "wrapt==1.17.3",
]
